# fxcam

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
cmake/: StaticAnalyzers.cmake
fuzz_test/: CMakeLists.txt
res/: fxcam.icns
src/: .clang-tidy  CMakeLists.txt  CameraDevice.h  DockSpaceWindow.h  FaceDetector.h  ICameraSource.h  StatisticsWindow.h  StopWatch.h  TextureWindow.h  VideoTexture.h  Window.h  main.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
